// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownViewer render should be able to render properly custom components not separated by \\n\\n 1`] = `
<React.Fragment>
  <MarkdownMedia
    config="(youtubeUrl)"
    key="0"
  />
  

  <MarkdownMedia
    config="(mediaUrl)"
    key="2"
  />
  

</React.Fragment>
`;

exports[`MarkdownViewer render should not render html by default 1`] = `
<React.Fragment>
  <p
    key="0"
  >
    &lt;div&gt;&lt;h1&gt;should be all a escaped string&lt;/h1&gt;&lt;/div&gt;
  </p>
  

</React.Fragment>
`;

exports[`MarkdownViewer render should render customHook components 1`] = `
<React.Fragment>
  <customComponent
    array={
      Array [
        Object {
          "bool": true,
          "child": Array [
            "a",
          ],
        },
        Object {
          "child": Array [
            "b",
          ],
        },
      ]
    }
    component="validcomponent"
    key="0"
    prop="a prop"
  />
  

  <p
    key="2"
  >
    Should allow markdown between hooks
  </p>
  

  <customComponent
    component="validcomponent"
    key="4"
  />
  

  <p
    className="error"
    key="6"
  >
    <br />
    <strong>
      <i>
        Custom component markup error: unsuported values! Please check your configuration
      </i>
    </strong>
    <br />
  </p>
  

</React.Fragment>
`;

exports[`MarkdownViewer render should render list components 1`] = `
<React.Fragment>
  <ItemList
    items={
      Array [
        "items2",
      ]
    }
    key="0"
    link="/library/param2"
    options={Object {}}
  />
  

  <ItemList
    items={Array []}
    key="2"
    link="/library/undefined"
    options={Object {}}
  />
  

  <ItemList
    items={Array []}
    key="4"
    link="/library/undefined"
    options={Object {}}
  />
  

</React.Fragment>
`;

exports[`MarkdownViewer render should render markdown 1`] = `
<React.Fragment>
  <h2
    key="0"
  >
    title
  </h2>
  

  <p
    key="2"
  >
    Some text with a 
    <a
      href="http://google.com"
      key="1"
    >
      URL
    </a>
     inside.
  </p>
  

  <p
    key="4"
  >
    Which should be in its own line, separated with TWO line breaks (to create a new &lt;p&gt; Element)
  </p>
  

  <pre
    key="6"
  >
    <code
      className="language-javascript"
      key="0"
    >
      Code

    </code>
  </pre>
  

</React.Fragment>
`;

exports[`MarkdownViewer render should render media components 1`] = `
<React.Fragment>
  <MarkdownMedia
    config="(1234, options)"
    key="0"
  />
  

  <MarkdownMedia
    config="(1234)"
    key="2"
  />
  

  <MarkdownMedia
    config="(config options)"
    key="4"
  />
  

</React.Fragment>
`;

exports[`MarkdownViewer render should support containers with custom classNames 1`] = `
<React.Fragment>
  <div
    className="test classname"
    key="0"
  >
    <p
      key="0"
    >
      text inside a div
    </p>
    

  </div>
</React.Fragment>
`;

exports[`MarkdownViewer render when markdown is empty should not render anything 1`] = `""`;

exports[`MarkdownViewer render when passing html true prop should render customComponents nested inside html 1`] = `
<React.Fragment>
  <div
    key="0"
  >
    <ItemList
      items={
        Array [
          "items1",
        ]
      }
      key="0"
      link="/library/param1"
      options={
        Object {
          "option1": "optionValue",
        }
      }
    />
    <div
      key="1"
    >
      <MarkdownMedia
        config="(url)"
        key="0"
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`MarkdownViewer render when passing html true prop should render html 1`] = `
<React.Fragment>
  <div
    key="0"
  >
    <h1
      key="0"
    >
      test
    </h1>
  </div>
</React.Fragment>
`;
